src/test/deca/context/invalid/class/print_incompatible.deca
// Description:
//    Test de mauvais utulisation la fonction print dans une methode
//                                          (Rule 3.31)
//
// Resultats:
//    Lexeur: pas d'erreur
//    Parseur: pas d'erreur
//    Context:on aura une erreur dans le cas ou on essaye de faire un print d’un
//              type autre que les types : “int” , “float” , “string” .

//
// Historique:
//    cree le 22/01/2022


class Maths{
    int resultat ;

    int power(int x){
        return x*x;
    }

    void AfficheResultat()
    {
        print(True);
    }

}

{

    Maths m = new Maths();

}
